--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,7 @@
 {% load static %}
 {% block title %}Wndr.Land{% endblock %}
 {%block content%}
-
-	<!-- Button trigger modal --> 
-
 <!-- Modal -->
-
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
 	  <div class="modal-content sbscribe-bg">
@@ -19,39 +15,22 @@
 		  <p>Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops. </p>
   
 			<form method="post" onsubmit="return false;">
-			  <!--<span class="nesltr-btn">
-				  <img src="{% static 'image/sucribe-input-img-center.png' %}" class="sucribe-center-pc" alt="subscribe-1">
-				  <img src="{% static 'image/sucribe-input-img-tabs.png' %}" class="sucribe-center-tabs" alt="subscribe-2">
-				  <img src="{% static 'image/sucribe-btn-center-img-mobile.png' %}" class="sucribe-center-pc-mobile" alt="subscribe-3">
-				  <input type="email" name="myInput" required  id="myInput" value="" placeholder="Enter email">
-				  <div class="clearfix"></div>
-			  
-			  </span>-->
 			  <div class="sbscribe_btn_input">
 				<span>
 					<input type="text" name="myInput1"  id="myInput1" value="" placeholder="Enter email">
 				</span>
 				</div>
-			
-			 
 			  <div class="alert alert-danger success-msg" id="sucess_div1" role="alert" hidden>
 				<span id="sucess1" ></span>
 			  </div>
 			  <div class="alert alert-danger error-msg" id="error_div1" role="alert" hidden>
 				<span id="error1" ></span>
 			  </div>
-				  <!-- <div class="alert alert-danger danger-msg" role="alert">
-					This is a danger alert—check it out!
-				  </div>
-				  <div class="alert alert-danger sueccs-msg" role="alert">
-					This is a danger alert—check it out!
-				  </div> -->
 			  <div class="sbscribe-section">
 				<button class="sbt-btn" id="btn-d1" onclick="myFunction1()">Submit 	 <div id ="load-image-of-modal-subscibe1" class="spinner-border text-danger" role="status">
 					<span class="sr-only">Loading...</span>
 				  </div></button>
 			  </div>
-		 
 		  </div>
 		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		</div>
@@ -59,7 +38,6 @@
 	</div>
   </div>
   <!--Modal ending here-->
-
     <!-- header close here -->
 	<div class="container">
 		<div class="row">
@@ -78,43 +56,14 @@
 							<span id="error2" ></span>
 						</div>
 						<div class="sucess_mesg">
-							<p class=""></p> <!--Remove Sucessfull inside the paragraph tag and class named "bnr_sucess_mesg" in p class--> 
+							<p class=""></p>
 						</div>
-						{% comment %} <div   class="spinner-grow text-light" role="status">
-							<span class="sr-only">Loading...</span>
-						  </div> {% endcomment %}
-						   
-						{% comment %} <section  id ="load-image">
-							<div class="loader" >
-							  <div class="upper ball"></div>
-							  <div class="right ball"></div>
-							  <div class="lower ball"></div>
-							  <div class="left ball"></div>
-							</div>
-						  </section>  {% endcomment %}
-						  {% comment %} <div id ="load-image" class="spinner-grow text-danger" role="status">
-							<span class="sr-only">Loading...</span>
-						  </div> {% endcomment %}
-						  {% comment %} <div>
-							<div class="db-spinner"></div>
-						  </div> {% endcomment %}
-
 						 <button class="WNDR-btn-item1 mbl_sbscribe_btn uk-scrollspy-inview" id="btn-d2" uk-scrollspy="cls: uk-animation-slide-left; delay: 200; repeat: true" onclick="myFunction2()">
-							subscribe <div id ="load-image" class="spinner-border text-danger" role="status"><span class="sr-only">Loading...</span>  </div> 
-							
-
-						</button>  
-						{% comment %} <button class="shadow-button-3" id="btn-d2" uk-scrollspy="cls: uk-animation-slide-left; delay: 200; repeat: true" onclick="myFunction2()">Subscribe <div id ="load-image" class="spinner-border text-danger" role="status">
-							<span class="sr-only">Loading...</span>
-						  </div> </button> {% endcomment %}
-						
-						{% comment %} <button class="glow-on-hover" type="button">Subscribe</button> {% endcomment %}
-	
+							subscribe <div id ="load-image" class="spinner-border text-danger" role="status"><span class="sr-only">Loading...</span></div>
+						</button>	
 						<div class="mbl-arrow">
 							<a class="arrow-wrap" href="#content" style="opacity: 1;">
 							<span class="arrow"></span>
-							
-							<!--<span class="hint">scroll</span>-->
 							</a>
 						</div>
 					</div>
@@ -160,13 +109,9 @@
 		</div>
 	</div>
 	<!-- About-WNDR-end -->
-
-
 	<!-- Image gallery-start -->
 	<div class="slect-outer">
 		<div class="inner-img">
-		<!--<img src="image/gallary-line-mobile1.png" class="gallary-line-mobile1">-->
-		<!--<img src="image/gallary-line-mobile3.png" class="gallary-line-mobile3">-->
 		<div class="slect-pvc-live bt-line-frst uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-right; delay: 400; repeat: true">
 			<h4>SELECT</h4>
 			<p>HYPER REAL AVATARS</p>
@@ -182,7 +127,6 @@
 			<h4>PVP</h4>
 			<p> Voice &amp; Video Chat</p>
 			<img src="{% static 'image/About-line.png' %}" class="gallary-line" alt="line-gallary2">
-			<!--<img src="image/gallary-line-mobile2.png" class="gallary-line-mobile2">-->
 		</div>
 		<div class="slect-pvc-live crypto-wndr-coin uk-scrollspy-inview"  uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
 			<h4>CRYPTO</h4>
@@ -233,8 +177,6 @@
 		</div>
 	</section> 
 	<!-- Image gallery-end -->
-
-
 	<!-- WNDRLAND-WNDR-start -->
 	<div class="WNDRLAND-WNDR"> 
 		<div class="container">
@@ -261,8 +203,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		
+		</div>		
 	</div>
 	<!-- WNDRLAND-WNDR-end -->
 		<div class="no-dwonload_section">
@@ -287,38 +228,18 @@
 		<div class="circle" style="animation-delay: 2s"></div>
 		<div class="circle" style="animation-delay: 3s"></div>
 	</div>
-	{% comment %} poster="{% static 'image/game-player.jpg' %}" {% endcomment %}
 	<div class="gamePlayer" id="appnd_div">			
 				<video id="myVideo" style="object-fit:cover;background-position: bottom center;" class="video video_desktop_home fullscr" width="100%" height="100%" preload='auto'  poster="" controlslist="nodownload noplaybackrate">
 				<source src="{% if video_obj %}{{video_obj.desktop_bottom_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}" type="video/mp4" ></video>
 			 <video id="myVideo2" class="video_mbl_home fullscr-mobile " width="100%" height="100%" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" controlslist="nodownload noplaybackrate" style="object-fit:cover;background-position: bottom center;" webkit-playsinline="true" playsinline="true">
-				{% comment %} {%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}"  {% endcomment %}
 				 <source src="{% if video_obj %}{{video_obj.mobile_bottom_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}"
 				 type="video/mp4">
 				</video>
-				<i class="fa-solid fa-expand " id="fullscreenhide_in_mobile" onclick="openFulldesktop();"></i>				
-			
-
-				
-{% comment %} 		
-				<i class="bi bi-fullscreen" style="font-size:48px;color:red">befhbejbfb</i> {% endcomment %}
-				
+				<i class="fa-solid fa-expand " id="fullscreenhide_in_mobile" onclick="openFulldesktop();"></i>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
-				
+			<div class="col-md-12">	
 				<div class="gamePlayer-outer remove_saveimage">
-					<!-- <div class="valume_buttn">
-						<div class="sound_on">
-							<i class="fa fa-volume-off" aria-hidden="true"></i>
-						</div>
-						<div class="sound_off">
-							<i class="fa fa-volume-up" aria-hidden="true"></i>
-						</div>	
-					</div> -->
-
-					
-					 
 					<div class="gamePlayer-logo-item">
 						<img src="{% static 'image/gamePlayer-logo.png' %}" class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true" alt="wndrland_videoLogo">
 						<div class="gamePlayer-contect">
@@ -333,17 +254,12 @@
 								</div>
 								 <div class="bnnr_img desktop_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
-									{% comment %} src="{% static 'image/game-player.jpg' %}" {% endcomment %}
-									 <img src="static/image/game-player.jpeg" id="play_button" class="desk_poster"/> 
+									 <img src="static/image/game-player.jpeg" alt="gamePlayer" id="play_button" class="desk_poster"/> 
 								</div> 
 								<div class="bnnr_img mbl_cover_bnr">
 									<div class="wndr_colosium_overlay"></div>
 									 <img src="{% static 'image/game-player_mbl.png' %}"  id="play_button"  style="object-fit:cover;"> 
-								</div>
-								<!--<div class="ply_img">
-								<img src="{% static 'image/button.png' %}" alt="gamePlayer-icon-1" id="pause_button" style="display:none">
-								</div>-->
-								
+								</div>					
 							</div>
 						</div>
 						<div class="game-contact uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
@@ -356,8 +272,6 @@
 	</div>
 </div>
 </div>
-
-
 	<!-- game-play end -->
 	<div class="no-dwonload_section">
 		<div class="container">
@@ -391,8 +305,6 @@
 		</div>
 	</section>
 		<!-- WNDR COINS End -->
-
-
     <!-- Subscribe newsletter Start -->
 	<section class="newsletter-bg" id="newsletter-outer">
 		<div class="container">
@@ -403,31 +315,17 @@
 						<img src="{% static 'image/nesltr-line.png' %}" class="subscribe-line-pc uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 700; repeat: true" alt="wndrland_newsletterLine">
 						<img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs" alt="newsletter-line1">
 						<p class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 900; repeat: true">Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops. </p>
-							<!--<span class="nesltr-btn">
-								<img src="{% static 'image/sucribe-input-img-center.png' %}" class="sucribe-center-pc" alt="subscribe-1">
-								<img src="{% static 'image/sucribe-input-img-tabs.png' %}" class="sucribe-center-tabs" alt="subscribe-2">
-								<img src="{% static 'image/sucribe-btn-center-img-mobile.png' %}" class="sucribe-center-pc-mobile" alt="subscribe-3">
-								
-								<input type="email" name="myInp" id="myInputs" value="" placeholder="Enter email">
-								<div class="clearfix"></div>
-							</span>-->
 							<div class="sbscribe_btn_input">
 								<span>
 									<input type="text" name="myInput3" id="myInput3" value="" placeholder="Enter email">
 								</span>
-
 								<div class="alert alert-danger sueccs-msg" id="sucess_div3" role="alert" hidden>
 									<span id="sucess3"></span>
 								  </div>
 								  <div class="alert alert-danger error-msg" id="error_div3" role="alert" hidden>
 									<span id="error3"></span>
 								  </div>
-
 							</div>
-								<!-- <div class="alert alert-danger danger-msg" role="alert">
-								  This is a danger alert—check it out!
-								</div>-->
-							   
 							<div class="sbscribe-section" id="submit_5">
 								<button class="sbt-btn" id="btn-d3" onclick="myFunction3()">Submit
 									<div id ="load-image-of-arrival2" class="spinner-border text-danger" role="status">
@@ -435,12 +333,10 @@
 									  </div> 
 								</button>
 							</div>
-						
 					</div>
 				</div>
 			</div>
 		</div> 
 	</section>
 	<!-- Subscribe newsletter End -->
-
 {% endblock %}
