--- a/templates/teams.html
+++ b/templates/teams.html
@@ -5,31 +5,25 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>WNDR.com</title>
-
 	<!-- slick css -->
  <link rel="stylesheet" href="{% static 'css/slick.css' %}">
  <link rel="stylesheet" href="{% static 'css/slick-theme.css' %}">
- <!--<link rel="stylesheet" href="{% static 'css/uikit.min.css' %}">-->
-
 	<!-- bootstrap-css start -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- link css -->
 	  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	  <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
-
 	   <!-- font awsome -->
     <script src="https://use.fontawesome.com/b197abb434.js"></script>
-
     <!-- fav icon -->
     <link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
 </head>
-
 <body>
 	<div class="mobilelandscapeview" style="position:relative;">
 		<div class="landscape_view1">
 		Back to Viewing Mode
-		<img class="back_to_mode" src="{% static 'image/phone_rotate_black.png' %}">
+		<img class="back_to_mode"  src="{% static 'image/phone_rotate_black.png' %}" alt="Viewing_mode">
 	</div>
 	</div>
 	<!-- Modal -->
@@ -44,15 +38,6 @@
 		  <img src="{% static 'image/subscribe-line-tabs.png' %}" class="subscribe-line-tabs" alt="newsletter-line1">
 		  <p>Subscribe here to get the latest news on WNDR events, launch dates, SDK release, WNDR coin and NFT drops. </p>
   			<form method="post" onsubmit="return false;">
-
-			  <!--<span class="nesltr-btn">
-				  <img src="{% static 'image/sucribe-input-img-center.png' %}" class="sucribe-center-pc" alt="subscribe-1">
-				  <img src="{% static 'image/sucribe-input-img-tabs.png' %}" class="sucribe-center-tabs" alt="subscribe-2">
-				  <img src="{% static 'image/sucribe-btn-center-img-mobile.png' %}" class="sucribe-center-pc-mobile" alt="subscribe-3">
-				  <input type="email" name="myInput" required id="myInput" value="" placeholder="Enter email">
-				  <div class="clearfix"></div>
-			  
-			  </span>-->
 			  <div class="sbscribe_btn_input">
 				<span>
 					<input type="email" name="myInput" required  id="myInput" value="" placeholder="Enter email">
@@ -61,16 +46,9 @@
 			  <div class="alert alert-danger sueccs-msg" id="sucess_div" role="alert" hidden>
 				<span id="sucess" ></span>
 			  </div>
-				  <!-- <div class="alert alert-danger danger-msg" role="alert">
-					This is a danger alert—check it out!
-				  </div>
-				  <div class="alert alert-danger sueccs-msg" role="alert">
-					This is a danger alert—check it out!
-				  </div> -->
 			  <div class="sbscribe-section" id="success_btn">
 				<button class="sbt-btn" id="btn-d" onclick="myFunction()">Submit</button>
 			  </div>
-
 		  </div>
 		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		</div>
@@ -94,9 +72,7 @@
 				      <svg xmlns="http://www.w3.org/2000/svg" class="bi" fill="currentColor" viewBox="0 0 16 16">
 				  <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path>
 				</svg>
-
 				    </button>
-
 					  <div class="navbar-collapse collapse" id="bdNavbar" style="">
 				      <ul class="navbar-nav m-auto mt-lg-0">
 					      <li class="nav-item">
@@ -114,7 +90,6 @@
 					      <li class="nav-item">
 					        <a class="nav-link" href="{% url 'contact' %}">CONTACT</a>
 					      </li>
-
 					      <div class="btn-header-subscribe">
 							<a href="#" class="" data-bs-toggle="modal" data-bs-target="#exampleModal">SUBSCRIBE</a>
 						    </div>
@@ -130,23 +105,15 @@
 		  </div>
 		</header>
     <!-- header close here -->
-
 <!----Start About Us---->
 <div class="container">
 		<div class="row abt-main-section">
-			<!-- <div class="col-lg-4 col-md-12 col-sm-4 col-xs-12"></div> -->
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 about-heading text-center">
 				<h1>Team Bio</h1>
 			</div>
-			<!---<div class="col-lg-3 col-md-12 col-sm-3 col-xs-12 wnddr-land d-none">
-				<img src="img/wndr-land.png">
-				<p>Powered By WNDR</p>
-			</div>-->
 		</div>
-		
 	</div>
-<!----End About Us---->	
-
+<!----End About Us---->
 <section class="home-testimonial main_about_testimonail">
     <div class="container-fluid">    
 		<section class="team_bio_section">
@@ -176,7 +143,6 @@
 						</div>
 					</div>
 					</div>
-
 					<div class="col-md-6 col-sm-6" >
 						<div class="member_teams">
 							<img class="tm-people" src="{% static 'img/srikant_img.jpg' %}" alt="">
@@ -200,9 +166,7 @@
 								<p><a href="javascript:void(0);"><i class="fa fa-linkedin" aria-hidden="true"></i>Let's connect!</a></p>		
 							</div>
 						</div>
-					</div>
-				
-					
+					</div>				
 				</div>
 				<div class="col-md-12 col-sm-6 srikant_div">
 					<div class="member_teams">
@@ -228,16 +192,10 @@
 				</div>
 			</div>
 	
-		</div>
-			
-			
-				
+		</div>	
 			</div>
-		
-
 
 <!--tblet section-->
-
 </div>
 </section>
 <!-- footer start here -->
@@ -268,33 +226,24 @@
 					</div>
 					<div class="col-md-4 col-lg-3 mbl-footer-social">
 						<div class="right-sec-footer-social">
-
-
 						<ul>
-
 						  <li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 200; repeat: true">
 							<a href="#">
 							  <i class="fa fa-facebook" aria-hidden="true"></i></a>
 						  </li>
-
 						  <li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 300; repeat: true">
 							<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 						  </li>
-
 						  <li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 400; repeat: true">
 							<a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
 						  </li>
-
 						  <li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 500; repeat: true">
 							<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 						  </li>
-
 						  <li class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true">
 							<a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
 						  </li>
-
 						</ul>
-
 						</div>
 					</div>
 				</div>
@@ -309,9 +258,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- bootstrap js -->
-<!--<script src="{% static 'js/uikit.min.js' %}"></script>-->
 <script>
-	
 	function myFunction() {
 		console.log("Arrival-3")
 			email = $('#myInput').val();
@@ -325,78 +272,53 @@
 					"email": email,
 					'csrfmiddlewaretoken': '{{csrf_token}}'
 				},
-	
 			success: function (data) {
 				document.getElementById("sucess_div").hidden=false;
 				document.getElementById("sucess").innerHTML = "Thank you for subscribing"
 				$('#myInput').val('');
-				// $("#sucess_div").delay(3000).fadeOut();
 				$("#sucess_div").show().delay(3000).fadeOut();
 				$("#btn-d").attr("disabled", false);
 	
 			},
 			});}
 		}
-	
 		let vision_poster_bnr_js = document.getElementsByClassName('vision_poster_bnr')[0]
 			vision_poster_bnr_js.style.display = "none";
-	
 		(function($){
-	
 			if(check_device()){
 				console.log('mobile');
 				$('body').on( ' touchstart','#myVideo12' , function (e) {
-					//if($("#myVideo12").get(0).play){	
 						$(this).get(0).pause();
 						$('.vision_poster_bnr').show();
-					//}
 				});
 				
 				$('body').on( 'touchstart','.vision_poster_bnr', function (e) {
-					// if($("#myVideo12").get(0).pause){	
-					// // e.preventDefault();
 					$(this).hide();
 					$("#myVideo12").get(0).play();
-					// }
 				});
 			}
 				if(!check_device()){
 					console.log('desktop');
 					$('body').on( ' click','#myVideo12' , function (e) {
-						//if($("#myVideo12").get(0).play){	
-							//$(this).get(0).pause();
 							$('.vision_poster_bnr').show();
 							vision_poster_bnr_js.style.display = "block";
-						//}
 					});
-					
 					$('body').on( 'click','.vision_poster_bnr', function (e) {
-						// e.preventDefault();
-						//$(this).hide();
 						$("#myVideo12").get(0).play();
 						vision_poster_bnr_js.style.display = "none";
-						
 					});
 				}
-	
-	
-	
 		})($);
-	
-	
 		function check_device(){
-		var isMobile = false; //initiate as false
-		// device detection
+		var isMobile = false;
 		if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|ipad|iris|kindle|Android|Silk|lge |maemo|midp|mmp|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(navigator.userAgent) 
 			|| /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(navigator.userAgent.substr(0,4))) { 
 			isMobile = true;
 		}
 		return isMobile;
 	}
-	
 	</script>
 	<script type="text/javascript">
-
 		document.onselectstart=function(){
 		if (event.srcElement.type != "text" && event.srcElement.type != "textarea" && event.srcElement.type != "password") {
 		return false;
@@ -456,12 +378,3 @@
 					}
 				  });
 			</script>
-{% comment %} 			
-			<script>
-				$(document).ready(function(){
-				  $(document).mouseleave(function(){
-					  $("#exampleModal").modal("show");
-				  });
-			  });
-			  </script>
-</html> {% endcomment %}
