--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,17 @@
 {% load static %}
 <html>
 <head>
-   <title>WNDR.com</title>
+   <title>Best Browser Games | Play Free Online Games  - WNDR.com</title>
    <meta charset="utf-8">
+   <meta name="description" content="At Wndr.com, you can get lots of online games such as NFT, Crypto, Multiplayer, and amazing PC games as well. This is the best browser to get free online games.">
+   <meta name="Keywords" content="Best Browser games,Desktop Games,best free games,best crypto games,free online multiplayer games,multiplayer games,best multiplayer games,multiplayer,free pc games">
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
    <meta name="google-site-verification" content="QH1Am3UNtUywGs9Ut9SFYPdWcoTumzm_IdXB0aDVzD4" />
-   <meta property="og:title" content="Wndrland" />
+   <meta property="og:title" content="Best Browser Games | Play Free Online Games  - WNDR.com" />
    <meta property="og:type" content="website" />
-   <meta property="og:url" content="http://my.website.com" />
+   <meta property="og:url" content="https://wndr.com" />
    <meta property="og:image:url" content="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png" />
-   <meta property="og:description" content="Site description" />
+   <meta property="og:description" content="At Wndr.com, you can get lots of online games such as NFT, Crypto, Multiplayer, and amazing PC games as well. This is the best browser to get free online games." />
    <meta property="og:image" content="https://wndr.nyc3.digitaloceanspaces.com/WOW_PC-min.png" />
    <!-- slick css -->
    <link rel="stylesheet" href="{% static 'css/slick.css' %}">
