--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
    <meta charset="utf-8">
    <meta name="description" content="At Wndr.com, you can get lots of online games such as NFT, Crypto, Multiplayer, and amazing PC games as well. This is the best browser to get free online games.">
    <meta name="Keywords" content="Best Browser games,Desktop Games,best free games,best crypto games,free online multiplayer games,multiplayer games,best multiplayer games,multiplayer,free pc games">
+   <link rel=“canonical” href=“https://wndr.com” />
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
    <meta name="google-site-verification" content="QH1Am3UNtUywGs9Ut9SFYPdWcoTumzm_IdXB0aDVzD4" />
    <meta property="og:title" content="Best Browser Games | Play Free Online Games  - WNDR.com" />
