--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta name="description" content="At Wndr.com, you can get lots of online games such as NFT, Crypto, Multiplayer, and amazing PC games as well. This is the best browser to get free online games.">
    <meta name="Keywords" content="Best Browser games,Desktop Games,best free games,best crypto games,free online multiplayer games,multiplayer games,best multiplayer games,multiplayer,free pc games">
-   <link rel=“canonical” href=“https://wndr.com” />
+   <link rel="canonical" href="https://wndr.com" />
    <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
    <meta name="google-site-verification" content="QH1Am3UNtUywGs9Ut9SFYPdWcoTumzm_IdXB0aDVzD4" />
    <meta property="og:title" content="Best Browser Games | Play Free Online Games  - WNDR.com" />
@@ -34,16 +34,15 @@
    <link rel="icon" type="image/x-icon" href="{% static 'image/fab-ic.png' %}">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W5RCLP680E"></script>
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PR4XX4G');</script>
+    <!-- End Google Tag Manager -->
+    
    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-W5RCLP680E');
-  </script>
-<script>
     gtag('event', 'conversion', {'send_to': 'AW-10997461539/L2prCLTdkeMDEKPk__so'});
   </script>
 </head>
@@ -219,6 +218,10 @@
                </div>
            </footer>
            <!-- footer close here-->
+           <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PR4XX4G"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
            <!-- jquery -->
            <script src="{% static 'js/jquery.js' %}"></script>
            <!-- jquery -->
